--- a/en/final-project/semana3.html
+++ b/en/final-project/semana3.html
@@ -46,53 +46,71 @@
         <div class="think__title">
             <div class="think__title__text">
                 <h1>Week 3</h1>
+            <h1>Project execution.</h1>
             </div>
-            <!-- <div class="think__title__content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
-            </div> -->
+            <div class="think__title__content">
+                <p>In this section we show the whole process that was carried out in order to get to assemble our furniture, a tutorial of the way of use and the documents obtained.</p>    
+	    </div>
         </div>
 
         <div class="think">
             <div class="think__img">
-                <img src="../../img/2d.png" alt="">
-            </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/CDKK_EdKiP4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+           </div>
             <div class="think__details">
                 <div class="think__details__icon">
-                    <i class="icon-design-graphic-tablet-streamline-tablet"></i>
+                    <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">2D and / or 3D design</p>
-                    <p class="think__details__info__cont">It is necessary to make a prototype before assembling it in the physical part, for that reason tools such as Autocad, rhinoceros, frizz helped us to make a virtual assembly of both the connections of the circuit that was developed in the sketch as well as the correct operation and possible improvements .</p>
+                    <p class="think__details__info__title">Use of the machine and Configuration</p>
+                    <p class="think__details__info__cont">
+For us to continue to cut the parts of our project, because we must have the necessary knowledge of the way to configure the cut in our Rhinoceros, besides knowing how to use the machine through the interface. </p>
                 </div>
 
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Document - 2D and 3D diagram</p>
-                    <p>This document shows the graphics of a two-dimensional project that consists of a security system for which we have used the tool "FZZ" as a means to demonstrate the implementation.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/a/tecsup.edu.pe/file/d/11rheWf4l_ERvf0U8q5jPEm75jaxn6xG_/view?usp=sharing" target="_blank">Document - 2D and 3D diagram</a></div>
+                    <p class="think__details__extra__title">Rhinoceros document - configured</p>
+                    <p>This document shows the Rhinoceros of each piece already configured according to the machine and thickness of the wood.</p>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1YYVbJJa7eyDWcF-G9SJB3HB6EcgkAXZZ/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°1</a></div>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1qqOtj1Cbow67dzjX91gapKsPtU2CWmS6/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°2</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1mjRnIzf-bUwQthU2vzi1MTqXlrnmACzZ/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°3</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1ybxwfrO4NALzxiKFjoPYamFq2oDQTYLb/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°4</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1eDeXC9sa75OPgC1U-MIe5BMlvLwe34KC/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°5</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1fCSaWPdn3_2n9U8EbDuvmGx6ryWaB7Vw/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°6</a></div>
+		</div>
+                <div class="think__details__extra">
+                    <p class="think__details__extra__title">Document JG of each piece</p>
+                    <p class="think__details__extra__description">Here we present the JG of each piece, the convergence of the rhinoceros</p>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1lF8meYgqy2lb_16SYhkro-JlFlx3frTw/view?usp=sharing" target="_blank">JG - Pieza N°1</a></div>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1xK42YokpR7uLmNiMTGZ152t8GiMTqiu8/view?usp=sharing" target="_blank">JG - Pieza N°2</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1c5PRaKJ4vfWZfCfGLjrtI70EkgIVNV15/view?usp=sharing" target="_blank">JG - Pieza N°3</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1_Dmvl_6QI_rBuWwpdhExQ6hAWA1dh9kA/view?usp=sharing" target="_blank">JG - Pieza N°4</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/16PrYouSFNTLprlHQODzh_qlI5Oz_oOvg/view?usp=sharing" target="_blank">JG - Pieza N°5</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1kDR4y3mTTNZxsV_HsgvJMnH_3YjWO3eQ/view?usp=sharing" target="_blank">JG - Pieza N°6</a></div>
                 </div>
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Files - 2D and 3D Diagram</p>
-                    <p>This document contains the two-dimensional file in which the corresponding diagram was made, which reflects the final implementation of the project implementation of a security system.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/open?id=1p4fRTwta_wBYXIyBpUkWmHSEy8_nh5m0" target="_blank">Files - 2D and 3D Diagram</a></div>
-                </div>
+                    <p class="think__details__extra__title">NC file</p>
+                    <p class="think__details__extra__description">Here an NC file is generated, in which we will save it in the computer or where it is convenient, taking into account that the parameters of the X-Y axis are those established by the machine.</p>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1L29VbIpr65izDgkRqAkrmI7TEx8w8Ql9/view?usp=sharing" target="_blank">Archivo NC - Pieza N°1</a></div>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1ZwESiYdbJMfkRDp1qpmtJID0uj_3fhPt/view?usp=sharing" target="_blank">Archivo NC - Pieza N°2</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/15qJO3B2_PC4jbVZQPtqqgjGVH8jfCqSs/view?usp=sharing" target="_blank">Archivo NC - Pieza N°3</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1zZQAmaW87ga2PVRBMUGnPlPO9P1jdHne/view?usp=sharing" target="_blank">Archivo NC - Pieza N°4</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1VTsjbaNNJyx0cNSukvoK-fHgHrXrNSCG/view?usp=sharing" target="_blank">Archivo NC - Pieza N°5</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1d0ic6ZHhdHoEeEWqD_JNI0Ot4c7Y07ww/view?usp=sharing" target="_blank">Archivo NC - Pieza N°6</a></div>
+		</div>
             </div>
         </div>
     </div>
-    <footer id="footer">
-        <div class="footer">
-            <div class="footer__licencia">
-                <p>License:</p>
-                <img src="../../img/licencia.png" alt="">
+                </div>
+                <div class="footer__copy">
+                    <img src="../img/fablab.png" alt="">
+                    <p>&copy; 2017 - Diseñado por: <a href="mailto:maria.soto@tecsup.edu.pe">Maria de los Angeles Soto Torres</a></p>
+                </div>
             </div>
-            <div class="footer__copy">
-                <img src="../../img/fablab.png" alt="">
-                <p>&copy; 2017 - Designed by: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
-            </div>
-        </div>
-    </footer>
-    <script src="../../js/script.js"></script>
+        </footer>
+    <script src="../js/script.js"></script>
 	<script>
 		edgrid.menu('main-nav','main-menu');
 	</script>
 </body>
 </html>
+
