--- a/proyecto-final/semana3.html
+++ b/proyecto-final/semana3.html
@@ -46,10 +46,10 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Ejecucion del Proyecto</h1>
+                <h1>Ejecución del Proyecto.</h1>
             </div>
             <div class="think__title__content">
-                <p>En esta seccion de mostrada todo el proceso que se realizo para poder llegar a armar nuestro mueble, un tutorial de la manera de uso, los documentos obtenidos</p>    
+                <p>En esta sección se muestra todo el proceso que se realizó para poder llegar a armar nuestro mueble, un tutorial de la manera de uso y los documentos obtenidos</p>    
 	    </div>
         </div>
 
@@ -62,13 +62,13 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Uso de la maquina y Configuracion</p>
-                    <p class="think__details__info__cont">Para poder nosotros proseguir a cortar las partes de nuestro proyecto , pues devemos tener el conocimiento necesario de la manera a configurar el corte en nuestro Rhinoceros , ademas de saber utilizar la maquina atraves del interfaz . </p>
+                    <p class="think__details__info__title">Uso de la maquina y Configuración</p>
+                    <p class="think__details__info__cont">Para nosotros proseguir a cortar las partes de nuestro proyecto , debemos tener el conocimiento necesario para la configuración en el programa Rhinoceros , además de saber utilizar la máquina a través del interfaz . </p>
                 </div>
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Documento de Rhinoceros - configurado</p>
-                    <p>El presente documento muestra los Rhinoceros de cada pieza ya configurada de acuerdo a la maquina y grosor de la madera.</p>
+                    <p>El presente documento muestra los Rhinoceros de cada pieza ya configurada de acuerdo a la máquina y grosor de la madera.</p>
                     <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1YYVbJJa7eyDWcF-G9SJB3HB6EcgkAXZZ/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°1</a></div>
                     <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1qqOtj1Cbow67dzjX91gapKsPtU2CWmS6/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°2</a></div>
 		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1mjRnIzf-bUwQthU2vzi1MTqXlrnmACzZ/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°3</a></div>
@@ -78,7 +78,7 @@
 		</div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Documento JG de cada pieza</p>
-                    <p class="think__details__extra__description">Aqui se presentan los JG de cada pieza, la convercion de los rhinoceros</p>
+                    <p class="think__details__extra__description">Aquí se presentan los JG de cada pieza, la converción de los rhinoceros</p>
                     <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1lF8meYgqy2lb_16SYhkro-JlFlx3frTw/view?usp=sharing" target="_blank">JG - Pieza N°1</a></div>
                     <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1xK42YokpR7uLmNiMTGZ152t8GiMTqiu8/view?usp=sharing" target="_blank">JG - Pieza N°2</a></div>
 		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1c5PRaKJ4vfWZfCfGLjrtI70EkgIVNV15/view?usp=sharing" target="_blank">JG - Pieza N°3</a></div>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Archivo NC</p>
-                    <p class="think__details__extra__description">Aqui se genera un archivo NC , en cual lo guardaremos en el ordenador o donde se vea conveniendo, teniendo en cuenta que los parametros del eje X-Y sean los establecidos por la maquina</p>
+                    <p class="think__details__extra__description">Aquí se genera un archivo NC , en cual lo guardamos en el ordenador o donde se veams conveniente, teniendo en cuenta que los parmetros del eje X-Y sean los establecidos por la máquina</p>
                     <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1L29VbIpr65izDgkRqAkrmI7TEx8w8Ql9/view?usp=sharing" target="_blank">Archivo NC - Pieza N°1</a></div>
                     <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1ZwESiYdbJMfkRDp1qpmtJID0uj_3fhPt/view?usp=sharing" target="_blank">Archivo NC - Pieza N°2</a></div>
 		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/15qJO3B2_PC4jbVZQPtqqgjGVH8jfCqSs/view?usp=sharing" target="_blank">Archivo NC - Pieza N°3</a></div>
@@ -99,11 +99,6 @@
             </div>
         </div>
     </div>
-    <footer id="footer">
-            <div class="footer">
-                <div class="footer__licencia">
-                    <p>Licencia:</p>
-                    <img src="../img/licencia.png" alt="">
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
