--- a/en/final-project/semana3.html
+++ b/en/final-project/semana3.html
@@ -22,22 +22,22 @@
 			<li><a href="../index.html">Home</a></li>
             <li><a href="../design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="../design-thinking/practica1.html">Practice 1</a></li>
-                    <li><a href="../design-thinking/practica2.html">Practice 2</a></li>
-                    <li><a href="../design-thinking/practica3.html">Practice 3</a></li>
-                    <li><a href="../design-thinking/practica4.html">Practice 4</a></li>
-                    <li><a href="../design-thinking/practica5.html">Practice 5</a></li>
+                    <li><a href="design-thinking/practica1.html">Design of the web page and approach of the Design Thinking Project</a></li>
+                    <li><a href="design-thinking/practica2.html">Design Thinking Workshop</a></li>
+                    <li><a href="design-thinking/practica3.html">Empathize</a></li>
+                    <li><a href="design-thinking/practica4.html">Define.</a></li>
+                    <li><a href="design-thinking/practica5.html">Devise.</a></li>
+		    <li><a href="design-thinking/practica6.html">Prototype and Test</a></li>
                 </ul>
              </li>
             <li><a href="../finalProject.html">Final Project</a>
                 <ul>
-                    <li><a href="semana1.html">Week 1</a></li>
-                    <li><a href="semana2.html">Week 2</a></li>
-                    <li><a href="semana3.html">Week 3</a></li>
-                    <li><a href="semana4.html">Week 4</a></li>
-                    <li><a href="semana5.html">Week 5</a></li>
-                    <li><a href="semana6.html">Week 6</a></li>
-                </ul>
+                    <li><a href="proyecto-final/semana1.html">Development of the Website</a></li>
+                    <li><a href="proyecto-final/semana2.html">Development of the Design</a></li>
+                    <li><a href="proyecto-final/semana3.html">Project execution</a></li>
+                    <li><a href="proyecto-final/semana4.html">Presentation Part 1</a></li>
+                    <li><a href="proyecto-final/semana5.html">Final presentation</a></li>
+                    <li><a href="proyecto-final/semana6.html">Project Fair</a></li>
             </li>
 		</ul>
 	</nav>
