--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -46,17 +46,17 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Presentacion Parte 1</h1>
+                <h1>Presentación Parte 1</h1>
             </div>
                     <div class="think__details__info">
-                             <p class="think__details__info__title">Procedimiento para armar el mueble plegable</p>
-                                     <p class="think__details__info__cont"> Para armas este mueble , se necesito bastantes maquinas de madera, que nos ayudaron a darle un mejor acabado y a obtener formas que deseabamos. A continucion se mencionara los pasos que se realizaron para el armado de este mueble</p>
-                                                   <p class="think__details__info__cont">1.- Tenemos que tener las partes de madena completas y de acuerdo a la medida necesaria, que de preferencia sean exactas</p>		   
-		                                   <p class="think__details__info__cont">2.- Proseguimos a lijar la madera, hasta que quede bastante liso</p>
-		                                   <p class="think__details__info__cont">3.- Empezamos con la base de 77x55 al cual se le unica por la parte de afuera las maderas con medidas de 77x12 y 60x12. Para esta parte se utiliza el taladro, para poder entornillar </p>
-		                                   <p class="think__details__info__cont">4.- Una ves que ya se tiene la superficie de los costados proseguimos a unir por la parte inferior las maderas de 57x10 mediante tornillos y clavos par obtener mayor dureza de union </p>
-		                                   <p class="think__details__info__cont">5.- Se continua con colocar las visagras de 2 pulgadas y 3/4 de pulgada , nuevamente utilizando el taladro </p>
-		                                   <p class="think__details__info__cont">6.- Finalmente se tiene que unir todas las tarde contando que la parte de atras del mueble para lograr ser empotrado tuvo q ser cortado a 45° </p>                            
+                             <p class="think__details__info__title">Procedimiento para armar el mueble plegable.</p>
+                                     <p class="think__details__info__cont"> Para armas este mueble , se necesito bastantes máquinas de madera, que nos ayudaron a darle un mejor acabado y a obtener formas que deseabamos. A continuación se mencionara los pasos que se realizaron para el armado de este mueble.</p>
+                                                   <p class="think__details__info__cont">1.- Tenemos que tener las partes de madena completas y de acuerdo a la medida necesaria, que de preferencia sean exactas.</p>		   
+		                                   <p class="think__details__info__cont">2.- Proseguimos a lijar la madera, hasta que quede bastante liso.</p>
+		                                   <p class="think__details__info__cont">3.- Empezamos con la base de 77x55 al cual se le única por la parte de afuera las maderas con medidas de 77x12 y 60x12. Para esta parte se utiliza el taladro, para entornillar. </p>
+		                                   <p class="think__details__info__cont">4.- Una ves que ya se tiene la superficie de los costados proseguimos a unir por la parte inferior las maderas de 57x10 mediante tornillos y clavos par obtener mayor dureza de unión. </p>
+		                                   <p class="think__details__info__cont">5.- Se continua con colocar las visagras de 2 pulgadas y 3/4 de pulgada , nuevamente utilizando el taladro. </p>
+		                                   <p class="think__details__info__cont">6.- Finalmente se tiene que unir todas las partes, cortando qla pieza que ira de atras del mueble para lograr ser empotrado tuvo q ser cortado a 45°. </p>                            
 		
 		<div class="think">
                      <div class="think__img">
@@ -86,7 +86,7 @@
                 </div>
                      <div class="think__details__info">
                         <p class="think__details__info__title">Manual de Instrucciones</p>
-                        <p class="think__details__info__cont">En el siguiente PDF, se presenta la manera correcta del uso de este producto, los materiales que esta posee , los equipos utilizados para poder armas este muebles ademas del procedimiento que se realiza reprentado por fotos . Tambien se va a poder observar las precauciones que se deve tener para el correcto uso </p>
+                        <p class="think__details__info__cont">En el siguiente PDF, se presenta la manera correcta del uso de este producto, los materiales que esta posee , los equipos utilizados para poder armas este muebles ademas del procedimiento que se realiza reprentado por fotos . También se va a poder observar las precauciones que se debe tener para el correcto uso. </p>
                         <a href="https://drive.google.com/file/d/1gPX4kw1Ph-zxjq6SOKlzjHsYo2WIzwb3/view?usp=sharing" target="_blank">PDF- Manual de Instrucciones</a>
 		     </div>     
             </div>
