--- a/en/final-project/semana4.html
+++ b/en/final-project/semana4.html
@@ -22,22 +22,22 @@
 			<li><a href="../index.html">Home</a></li>
             <li><a href="../design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="../design-thinking/practica1.html">Practice 1</a></li>
-                    <li><a href="../design-thinking/practica2.html">Practice 2</a></li>
-                    <li><a href="../design-thinking/practica3.html">Practice 3</a></li>
-                    <li><a href="../design-thinking/practica4.html">Practice 4</a></li>
-                    <li><a href="../design-thinking/practica5.html">Practice 5</a></li>
+                   <li><a href="design-thinking/practica1.html">Design of the web page and approach of the Design Thinking Project</a></li>
+                    <li><a href="design-thinking/practica2.html">Design Thinking Workshop</a></li>
+                    <li><a href="design-thinking/practica3.html">Empathize</a></li>
+                    <li><a href="design-thinking/practica4.html">Define.</a></li>
+                    <li><a href="design-thinking/practica5.html">Devise.</a></li>
+		    <li><a href="design-thinking/practica6.html">Prototype and Test</a></li>
                 </ul>
              </li>
             <li><a href="../finalProject.html">Final Project</a>
                 <ul>
-                    <li><a href="semana1.html">Week 1</a></li>
-                    <li><a href="semana2.html">Week 2</a></li>
-                    <li><a href="semana3.html">Week 3</a></li>
-                    <li><a href="semana4.html">Week 4</a></li>
-                    <li><a href="semana5.html">Week 5</a></li>
-                    <li><a href="semana6.html">Week 6</a></li>
-                </ul>
+                    <li><a href="proyecto-final/semana1.html">Development of the Website</a></li>
+                    <li><a href="proyecto-final/semana2.html">Development of the Design</a></li>
+                    <li><a href="proyecto-final/semana3.html">Project execution</a></li>
+                    <li><a href="proyecto-final/semana4.html">Presentation Part 1</a></li>
+                    <li><a href="proyecto-final/semana5.html">Final presentation</a></li>
+                    <li><a href="proyecto-final/semana6.html">Project Fair</a></li>
             </li>
 		</ul>
 	</nav>
@@ -46,49 +46,65 @@
         <div class="think__title">
             <div class="think__title__text">
                 <h1>Week 4</h1>
+            <h1>Presentation Part 1</h1>
             </div>
-            <!-- <div class="think__title__content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
-            </div> -->
+                    <div class="think__details__info">
+                             <p class="think__details__info__title">Procedure to assemble the folding furniture.</p>
+                                     <p class="think__details__info__cont">  <p class="think__details__info__cont"> To assemble this piece of furniture, it took a lot of wooden machines, which helped us to give it a better finish and obtain the shapes we wanted. Next we will mention the steps that were carried out for the assembly of this piece of furniture.</p>
+                                                   <p class="think__details__info__cont">1.- We have to have the complete wooden parts and according to the necessary measure, which preferably are exact.</p>		   
+		                                   <p class="think__details__info__cont">2.- We proceed to sand the wood, until it is quite smooth.</p>
+		                                   <p class="think__details__info__cont">3.- We started with the base of 77x55 which is unique to the outside of the woods with measures of 77x12 and 60x12. For this part, the drill is used to screw. </p>
+		                                   <p class="think__details__info__cont">4.- Once we have the surface of the sides, we continue to join the 57x10 woods at the bottom using screws and nails to obtain a higher joining hardness. </p>
+		                                   <p class="think__details__info__cont">5.- Continue to place the 2-inch and 3/4-inch hinges, again using the drill. </p>
+		                                   <p class="think__details__info__cont">6.- Finally, all the parts have to be joined, cutting the piece that will go behind the piece of furniture in order to be recessed, it had to be cut at 45 °. </p>                            
+		
+		<div class="think">
+                     <div class="think__img">
+                        <img src="../img/parte1.jpeg" alt="">                                                                                             
+		</div>   
+	        <div class="think">
+                     <div class="think__img">
+                        <img src="../img/segundo.jpeg" alt="">                                                                                             
+		</div> 
+		<div class="think">
+                     <div class="think__img">
+                        <img src="../img/penultimo.jpeg" alt="">                                                                                             
+		</div> 
+		<div class="think">
+                     <div class="think__img">
+                        <img src="../img/final.jpeg" alt="">                                                                                             
+		</div> 
         </div>
 
         <div class="think">
             <div class="think__img">
-                 <iframe width="560" height="315" src="https://www.youtube.com/embed/dir6t60cAlY?rel=0" frameborder="0" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/rc77RuOGal4" frameborder="0" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/yXJFWf-_Lag" frameborder="0" allowfullscreen></iframe>
+                 <iframe width="560" height="315" src="https://www.youtube.com/embed/3r2QyojnZlA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-settings-streamline"></i>
                 </div>
-                <div class="think__details__info">
-                    <p class="think__details__info__title">50% Implementation and Operation</p>
-                    <p class="think__details__info__cont">In this document you will find the assembly of the circuit already physically assembled based on the prototype made previously, as well as the optimal functioning of the camera service and the application made for it.</p>
-                </div>
-
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Document - 50% Implementation</p>
-                    <p>Based on the Gant diagram, and corresponding to that week in this part the project of the security system from a mobile application began to assemble the connections according to the diagram made previously as well as develop the code in arduino to send the pulses to the servomotor. On the other hand, the connection of the camera was made through the programming language in js.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/open?id=1Fr3yzB_1fZSvpqip6UBm-l1IyFxge0_C" target="_blank">Document - 50% Implementation</a></div>
-                </div>
-                
+                     <div class="think__details__info">
+                        <p class="think__details__info__title">Manual</p>
+                        <p class="think__details__info__cont">In the following PDF, we present the correct way of using this product, the materials it has, the equipment used to arm this furniture in addition to the procedure that is performed by photos. You will also be able to observe the precautions that you must have for the correct use.</p>
+                        <a href="https://drive.google.com/file/d/1gPX4kw1Ph-zxjq6SOKlzjHsYo2WIzwb3/view?usp=sharing" target="_blank">PDF- Manual </a>
+		     </div>     
             </div>
         </div>
     </div>
     <footer id="footer">
-        <div class="footer">
-            <div class="footer__licencia">
-                <p>License:</p>
-                <img src="../../img/licencia.png" alt="">
+            <div class="footer">
+                <div class="footer__licencia">
+                    <p>Licencia:</p>
+                    <img src="../img/licencia.png" alt="">
+                </div>
+                <div class="footer__copy">
+                    <img src="../img/fablab.png" alt="">
+                    <p>&copy; 2017 - Diseñado por: <a href="mailto:maria.soto@tecsup.edu.pe">Maria de los Angeles Soto Torres</a></p>
+                </div>
             </div>
-            <div class="footer__copy">
-                <img src="../../img/fablab.png" alt="">
-                <p>&copy; 2017 - Designed by: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
-            </div>
-        </div>
-    </footer>
-    <script src="../../js/script.js"></script>
+        </footer>
+    <script src="../js/script.js"></script>
 	<script>
 		edgrid.menu('main-nav','main-menu');
 	</script>
