--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -40,48 +40,38 @@
                     <li><a href="../proyecto-final/semana6.html">feria del proyecto</a></li>
                 </ul>
             </li>
-		</ul>
-	</nav>
-
+        </ul>
+    </nav>
+ 
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
                 <h1>Definir</h1>
             </div>
             <div class="think__title__content">
-                <p>En este punto, ahora toca analizar y resumir la información obtenida en el punto anterior.</p>
-                <p> Luego de conocer las dificultades y problemas de los usuarios se paso a realiar la siguiente etapa, que consta de seleccionar toda la informacion evaluada de la etapa anterior.</p>
-	    </div>
+                <p>hinking: <br>En este punto, ahora toca analizar y resumir la información obtenida en el punto anterior.<br>Luego de conocer las dificultades y problemas de los usuarios se paso a realiar la siguiente etapa, que consta de seleccionar toda la informacion evaluada de la etapa anterior.</p>
+            </div>
         </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Criterios de Evaluacion</p>
-                    <p class="think__details__info__cont"> 1.- Encuentran la causa raíz del problema y generan criterios para evaluar la información y contrarrestarlas con el uso correcto de técnicas.</p>
-                    <p class="think__details__info__cont"> 2.- Enmarcan el problema en un enfoque directo.</p>
-		    <p class="think__details__info__cont"> 3.- Define los insight del usuario, cliente o consumidor.</p>
-		    <p class="think__details__info__cont"> 4.- Publican en la pagina web los detalles de los puntos anteriores</p>
-	
-                </div> 
-            <div class="think__details">
-                <div class="think__details__icon">
-                    <i class="icon-speech-streamline-talk-user"></i>
+                    <p class="think__details__info__title">CRITERIOS DE EVALUACION</p>
+                    <p class="think__details__info__cont">1.- Encuentran la causa raíz del problema y generan criterios para evaluar la información y contrarrestarlas con el uso correcto de técnicas</p>
+                    <p class="think__details__info__cont">2.-Enmarcan el problema en un enfoque directo  </p>
+		    <p class="think__details__info__cont">3.- Define los insight del usuario, cliente o consumidor.</p>
+		    <p class="think__details__info__cont">4.- Publican en la pagina web los detalles de los puntos anteriores</p>
+		</div>
+
+                <div class="think__details__extra">
+                    <p class="think__details__extra__title">DIFERENCIA EN NUESTRO PRODUCTO</p>
+                    <p>En el siguiente documento se muestra las diferencias de nuestro producto que saldra al mercado tanto economicas como del mismo producto, comparada con la que ya tenemos en el mercado del extranjero; tratando de conocer la implementación de dicho producto.</p>   
                 </div>
-                <div class="think__details__info">
-                    <p class="think__details__info__title">DIFERENCIA EN NUESTRO PRODUCTO</p>
-                    <p class="think__details__info__cont"> En el siguiente documento se muestra las diferencias de nuestro producto que saldra al mercado tanto economicas como del mismo producto, comparada con la que ya tenemos en el mercado del extranjero; tratando de conocer la implementación de dicho producto.</p>
-                </div>    
-	    </div>
-            <div class="think__details">
-                <div class="think__details__icon">
-                    <i class="icon-speech-streamline-talk-user"></i>
+                <div class="think__details__extra">
+                    <p class="think__details__extra__title">VISIÓN DEL CLIENTE</p>
+                    <p>Conociendo las necesidades que tiene nuestro cliente, pues aveces hay situaciones que no nos permite darnos estos pequeños consentimientos, es decir es muy probable que los productos que son vendidos en el extrajero seas muy caros para nuestra moneda, lo cual genera que no adquiramos esos productos es por eso que nosotro hicimos un cuadro comparativo para conocer las diferencias que estos poseen para beneficio de cada cliente y acorde a su situación.</p>    
                 </div>
-                <div class="think__details__info">
-                    <p class="think__details__info__title">VISIÓN DEL CLIENTE</p>
-                    <p class="think__details__info__cont">Conociendo las necesidades que tiene nuestro cliente, pues aveces hay situaciones que no nos permite darnos estos pequeños consentimientos, es decir es muy probable que los productos que son vendidos en el extrajero seas muy caros para nuestra moneda, lo cual genera que no adquiramos esos productos es por eso que nosotro hicimos un cuadro comparativo para conocer las diferencias que estos poseen para beneficio de cada cliente y acorde a su situación.</p>
-                 </div>
             </div>
         </div>
     </div>
@@ -93,7 +83,7 @@
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="alicia.tejada@tecsup.edu.pe">Alicia Nadine Tejada Zegarra</a></p>
+                    <p>&copy; 2017 - Diseñado por: <a href="mailto:maria.soto@tecsup.edu.pe">Maria de los Angeles Soto Torres</a></p>
                 </div>
             </div>
         </footer>
@@ -103,3 +93,5 @@
 	</script>
 </body>
 </html>
+
+    
