--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -63,10 +63,19 @@
 		    <p class="think__details__info__cont">3.- Define los insight del usuario, cliente o consumidor.</p>
 		    <p class="think__details__info__cont">4.- Publican en la pagina web los detalles de los puntos anteriores</p>
 		</div>
-
+        </div>
+            <div class="think__details">
+                <div class="think__details__icon">
+                    <i class="icon-speech-streamline-talk-user"></i>
+                </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">DIFERENCIA EN NUESTRO PRODUCTO</p>
                     <p>En el siguiente documento se muestra las diferencias de nuestro producto que saldra al mercado tanto economicas como del mismo producto, comparada con la que ya tenemos en el mercado del extranjero; tratando de conocer la implementación de dicho producto.</p>   
+                </div>
+         </div>
+            <div class="think__details">
+                <div class="think__details__icon">
+                    <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">VISIÓN DEL CLIENTE</p>
