--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -49,7 +49,7 @@
                 <h1>Definir</h1>
             </div>
             <div class="think__title__content">
-                <p>hinking: <br>En este punto, ahora toca analizar y resumir la información obtenida en el punto anterior.<br>Luego de conocer las dificultades y problemas de los usuarios se paso a realiar la siguiente etapa, que consta de seleccionar toda la informacion evaluada de la etapa anterior.</p>
+                <p><br>En este punto, ahora toca analizar y resumir la información obtenida en el punto anterior.<br>Luego de conocer las dificultades y problemas de los usuarios se paso a realiar la siguiente etapa, que consta de seleccionar toda la informacion evaluada de la etapa anterior.</p>
             </div>
         </div>
             <div class="think__details">
