--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -62,6 +62,18 @@
                     <p class="think__details__info__cont">2.-Enmarcan el problema en un enfoque directo  </p>
 		    <p class="think__details__info__cont">3.- Define los insight del usuario, cliente o consumidor.</p>
 		    <p class="think__details__info__cont">4.- Publican en la pagina web los detalles de los puntos anteriores</p>
+	        </div>
+	</div>
+            <div class="think__details">
+                <div class="think__details__icon">
+                    <i class="icon-speech-streamline-talk-user"></i>
+                </div>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">CRITERIOS DE EVALUACION</p>
+                    <p class="think__details__info__cont">1.- Encuentran la causa raíz del problema y generan criterios para evaluar la información y contrarrestarlas con el uso correcto de técnicas</p>
+                    <p class="think__details__info__cont">2.-Enmarcan el problema en un enfoque directo  </p>
+		    <p class="think__details__info__cont">3.- Define los insight del usuario, cliente o consumidor.</p>
+		    <p class="think__details__info__cont">4.- Publican en la pagina web los detalles de los puntos anteriores</p>
                 </div>
             </div>
         </div>
