--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -69,11 +69,17 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">CRITERIOS DE EVALUACION</p>
-                    <p class="think__details__info__cont">1.- Encuentran la causa raíz del problema y generan criterios para evaluar la información y contrarrestarlas con el uso correcto de técnicas</p>
-                    <p class="think__details__info__cont">2.-Enmarcan el problema en un enfoque directo  </p>
-		    <p class="think__details__info__cont">3.- Define los insight del usuario, cliente o consumidor.</p>
-		    <p class="think__details__info__cont">4.- Publican en la pagina web los detalles de los puntos anteriores</p>
+                    <p class="think__details__info__title">DIFERENCIA EN NUESTRO PRODUCTO</p>
+                    <p class="think__details__info__cont">En el siguiente documento se muestra las diferencias de nuestro producto que saldra al mercado tanto economicas como del mismo producto, comparada con  la que ya tenemos en el mercado del extranjero, tratando de conocer la implementacion de dicho producto</p>
+	        </div>
+         </div>
+            <div class="think__details">
+                <div class="think__details__icon">
+                    <i class="icon-speech-streamline-talk-user"></i>
+                </div>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">VISION DEL CLIENTE</p>
+                    <p class="think__details__info__cont">Conociendo las necesidades que tiene nuestro cliente, pues aveces hay situaciones que no nos permite darnos estos pequeños consentimientos, es decir es muy probable que los productos que son vendidos en el extranjero ,talves ppuedan ser muy caros para nuestra moneda,lo cual genera que nos adquiramos estos producto es por eso que nosotros hicimos un cuadro comparativo para conocer las diferencias que estos poseen para beneficio de cada cliente y acorde a su situacion</p>   
                 </div>
             </div>
         </div>
