--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -112,7 +112,8 @@ Es nuestra filosofía sostenible, la que nos ha hecho ser miembros de la Red de 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Respuestas</p>
                     <p>En el presente documento adjuntado se apreciara la encuesta realizada a 21 personas en la localidad de Arequipa.En este documento, se muestra las respuestas a la encuesta.</p>
-                    <a href="https://drive.google.com/open?id=1PPBZmRs6tusLJgVFBGZ1mXamneTRx6PH" "https://drive.google.com/open?id=1glFo-rg0gW3ZbkqYlWxVqp2_aPFV_mHd" class="think__details__extra__description"  target="_blank">Documento - Respuestas</a>
+                    <a href="https://drive.google.com/open?id=1PPBZmRs6tusLJgVFBGZ1mXamneTRx6PH" class="think__details__extra__description"  target="_blank">Documento</a>
+		    <a href="https://drive.google.com/open?id=1glFo-rg0gW3ZbkqYlWxVqp2_aPFV_mHd" class="think__details__extra__description"  target="_blank">Respuestas</a>
                 </div>
 		<div class="think__details__extra">
                     <p class="think__details__extra__title">Respuestas del Ingeniero</p>
