--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -89,7 +89,12 @@
                         <p class="think__details__info__cont">En el siguiente PDF, se presenta la manera correcta del uso de este producto, los materiales que esta posee , los equipos utilizados para poder armas este muebles ademas del procedimiento que se realiza reprentado por fotos . También se va a poder observar las precauciones que se debe tener para el correcto uso. </p>
                         <a href="https://drive.google.com/file/d/1gPX4kw1Ph-zxjq6SOKlzjHsYo2WIzwb3/view?usp=sharing" target="_blank">PDF- Manual de Instrucciones</a>
 		     </div>     
-            </div>
+               </div>
+		     <div class="think__details__info">
+                        <p class="think__details__info__title">Logo de nuestra empresa "AMYE"</p>
+                        <p class="think__details__info__cont">En el siguiente archivo, se presenta el logo que se utilizara para el empaquetamiento de nuestro producto. </p>
+                        <a href="https://drive.google.com/file/d/1CdGOJ1aygd6SL_PoE-RS0ER3RIJI1hCL/view?usp=sharing">Logo de nuestra empresa "AMYE"</a>
+		     </div>     
         </div>
     </div>
     <footer id="footer">
