--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -68,6 +68,12 @@
                     <p class="think__details__extra__description"> </p>
                     <a href="https://drive.google.com/file/d/1Ci4MUE9cheO-vYDtNGusR1TZ0dT91NJ6/view?usp=sharing"_blank">PLANOS</a>
                 </div>
+														       
+		<div class="think__details__extra">
+                    <p class="think__details__extra__title">ARCHIVO DE RHINOCEROS - PLANOS DE LA CAJA EMPAQUE</p>
+                    <p class="think__details__extra__description"> </p>
+                    <a href="https://drive.google.com/open?id=14xUcqMvlp_eEk5xjQxIm91Ct_8SQiTjg"_blank">PLANO</a>
+                </div>    
 		    
 	        <div class="think__details__extra">
                     <p class="think__details__extra__title">ARCHIVO EN PDF - PLANOS</p>
