--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -80,7 +80,12 @@
                 <div class="think__details__info">
                     <p class="think__details__info__title">VISION DEL CLIENTE</p>
                     <p class="think__details__info__cont">Conociendo las necesidades que tiene nuestro cliente, pues aveces hay situaciones que no nos permite darnos estos pequeños consentimientos, es decir es muy probable que los productos que son vendidos en el extranjero ,talves ppuedan ser muy caros para nuestra moneda,lo cual genera que nos adquiramos estos producto es por eso que nosotros hicimos un cuadro comparativo para conocer las diferencias que estos poseen para beneficio de cada cliente y acorde a su situacion</p>   
-                </div>
+                   </div>   
+	             <div class="think">
+                         <div class="think__img">
+                             <img src="../img/segundo.jpeg" alt="">                                                                                             
+		      </div>
+		</div>
             </div>
         </div>
     </div>
