--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -80,7 +80,13 @@
                 <div class="think__details__info">
                     <p class="think__details__info__title">VISION DEL CLIENTE</p>
                     <p class="think__details__info__cont">Conociendo las necesidades que tiene nuestro cliente, pues aveces hay situaciones que no nos permite darnos estos pequeños consentimientos, es decir es muy probable que los productos que son vendidos en el extranjero ,talves ppuedan ser muy caros para nuestra moneda,lo cual genera que nos adquiramos estos producto es por eso que nosotros hicimos un cuadro comparativo para conocer las diferencias que estos poseen para beneficio de cada cliente y acorde a su situacion</p>   
-                   </div>   
+                </div>
+		<div class="think__details__extra">
+                    <p class="think__details__extra__title">Beneficios que presenta nuestro producto</p>
+                    <p>Este documento contiene los beneficios de nuestro proyecto incrementando el porcentajes de dinero al nuestro precio real, variando los precios</p>
+                    <a href="https://drive.google.com/file/d/1at3VvraobrCnrBjEV4w5ckdcL7olOWHI/view?usp=sharing" target="_blank" class="think__details__extra__description">Cuadros de beneficios incrementando el precio</a>
+                </div>
+		    </div>   
 	             <div class="think">
                          <div class="think__img">
                              <img src="../img/segundo.jpeg" alt="">                                                                                             
