--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -89,7 +89,7 @@
 		    </div>   
 	             <div class="think">
                          <div class="think__img">
-                             <img src="../img/segundo.jpeg" alt="">                                                                                             
+                             <img src="" alt="">                                                                                             
 		      </div>
 		</div>
             </div>
