--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -95,7 +95,12 @@
                         <p class="think__details__info__cont">En el siguiente archivo, se presenta el logo que se utilizara para el empaquetamiento de nuestro producto. </p>
                         <a href="https://drive.google.com/file/d/1CdGOJ1aygd6SL_PoE-RS0ER3RIJI1hCL/view?usp=sharing">Logo de nuestra empresa "AMYE"</a>
 		     </div>     
-        </div>
+               </div>
+		     <div class="think__details__extra">
+                        <p class="think__details__extra__title">ARCHIVO DE RHINOCEROS - PLANOS DE LA CAJA EMPAQUE</p>
+                        <p class="think__details__extra__description"> </p>
+                        <a href="https://drive.google.com/open?id=14xUcqMvlp_eEk5xjQxIm91Ct_8SQiTjg"_blank">PLANO</a>
+                </div>    
     
                 </div>
             </div>
