--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -96,9 +96,9 @@
                         <a href="https://drive.google.com/file/d/1CdGOJ1aygd6SL_PoE-RS0ER3RIJI1hCL/view?usp=sharing">Logo de nuestra empresa "AMYE"</a>
 		     </div>     
                </div>
-		     <div class="think__details__extra">
-                        <p class="think__details__extra__title">ARCHIVO DE RHINOCEROS - PLANOS DE LA CAJA EMPAQUE</p>
-                        <p class="think__details__extra__description"> </p>
+		      <div class="think__details__info">
+                        <p class="think__details__info__title">ARCHIVO DE RHINOCEROS - PLANOS DE LA CAJA EMPAQUE</p>
+                        <p class="think__details__info__description"> </p>
                         <a href="https://drive.google.com/open?id=14xUcqMvlp_eEk5xjQxIm91Ct_8SQiTjg"_blank">PLANO</a>
                 </div>    
     
