--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -98,7 +98,7 @@
                </div>
 		      <div class="think__details__info">
                         <p class="think__details__info__title">ARCHIVO DE RHINOCEROS - PLANOS DE LA CAJA EMPAQUE</p>
-                        <p class="think__details__info__description"> </p>
+                         <p class="think__details__info__cont">En el siguiente archivo, se presenta los planos de la caja para empaquetar nuestro producto. </p>
                         <a href="https://drive.google.com/open?id=14xUcqMvlp_eEk5xjQxIm91Ct_8SQiTjg"_blank">PLANO</a>
                 </div>    
     
